# uzbek-quiz

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: build-portable-windows.yml  build-windows.yml
scripts/: build-tauri.mjs  dev-server.mjs
src/: app.js  index.html  questions.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src/question-sets/: accounting-practice.js  test-1.js
