[package]
name = "uzbek_quiz_tauri"
version = "0.1.0"
description = "Uzbek quiz as a Tauri app"
authors = ["Alif Uzbekistan"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
